--- a/pelicanyan/templates/sidebar.html
+++ b/pelicanyan/templates/sidebar.html
@@ -32,7 +32,7 @@ styles, `#sidebar-checkbox` for behavior. -->
     <a href="https://twitter.com/{{ TWITTER_ACCOUNT }}">&copy; @{{ TWITTER_ACCOUNT }}</a> 2015
     </p>
     <p class="tiny-note">
-      <a class="muted" href="https://github.com/thomaswilley/pelicanyan">pelicanyan v0.1</a>
+      <a class="muted" href="https://andriisoldatenko.github.io/">Made with love</a>
     </p>
   </div>
 </div>
