--- a/pelicanyan/templates/sidebar.html
+++ b/pelicanyan/templates/sidebar.html
@@ -29,7 +29,7 @@ styles, `#sidebar-checkbox` for behavior. -->
 
   <div class="sidebar-item">
     <p>
-    <a href="https://twitter.com/{{ TWITTER_ACCOUNT }}">&copy; @{{ TWITTER_ACCOUNT }}</a> 2015
+    <a href="https://twitter.com/{{ TWITTER_ACCOUNT }}">@{{ TWITTER_ACCOUNT }}</a>
     </p>
     <p class="tiny-note">
       <a class="muted" href="https://andriisoldatenko.github.io/">Made with love</a>
