--- a/pelicanyan/templates/base.html
+++ b/pelicanyan/templates/base.html
@@ -104,6 +104,7 @@
          })();
        </script>
        {% endif %}
-     </div>
+        <script id="dsq-count-scr" src="//asoldatenko2.disqus.com/count.js" async></script>
+    </div>
   </body>
 </html>
