--- a/pelicanyan/templates/base.html
+++ b/pelicanyan/templates/base.html
@@ -34,6 +34,43 @@
     {% if TAG_FEED_RSS and tag %}
     <link href="{{ FEED_DOMAIN }}/{{ TAG_FEED_RSS|format(tag.slug) }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} Tags RSS Feed" />
     {% endif %}
+        <!-- https://developers.google.com/custom-search/docs/structured_data?hl=es&csw=1#microformats -->
+        <!--
+    <PageMap>
+    {% if article %}
+    <DataObject type="document">
+        <Attribute name="title">{{article.title|striptags}}</Attribute>
+        <Attribute name="author">{{ article.author }}</Attribute>
+        <Attribute name="description">{{ article.summary|striptags }}</Attribute>
+        <Attribute name="page_count">1</Attribute>
+        <Attribute name="rating">5</Attribute>
+        <Attribute name="last_update">{{ article.date.isoformat() }}</Attribute>
+    </DataObject>
+    <DataObject type="metatags">
+        <Attribute name="category" value="{{ article.category }}"/>
+        {% for tag in article.tags %}
+            <Attribute name="category" value="{{tag}}"/>
+        {% endfor %}
+    </DataObject>
+    {% else %}
+    <DataObject type="document">
+    <Attribute name="title">{{ SITENAME }}</Attribute>
+    <Attribute name="author">{{ AUTHOR }}</Attribute>
+    <Attribute name="description">{{ SITESUBTITLE }}</Attribute>
+    <Attribute name="page_count">1</Attribute>
+    <Attribute name="rating">5</Attribute>
+    <Attribute name="last_update">{{ CURRENT_DATE }}</Attribute>
+    </DataObject>
+    {% endif %}
+    {% if GRAVATAR_IMAGE %}
+    <DataObject type="thumbnail">
+    <Attribute name="src" value="{{GRAVATAR_IMAGE}}" />
+    <Attribute name="width" value="300" />
+    <Attribute name="height" value="300" />
+    </DataObject>
+    </PageMap>
+    {% endif %}
+    -->
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/poole.css"/>
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/syntax.css"/>
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/lanyon.css"/>
