--- a/pelicanyan/templates/base.html
+++ b/pelicanyan/templates/base.html
@@ -7,8 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
-    <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
-
+    {% block title %}<title>{{ SITENAME }}</title>{% endblock title %}
+    {% block description %}
+        <meta name="description" content="{{ SITEDESCRIPTION }}">
+        <meta property="og:title" content="Python Geek Blog about development, testing and Python">
+        <meta property="og:description" content="Software Blog">
+        <meta name="news_keywords" content="python,blog,geek">
+        <meta property="og:site_name" content="Python Geek Blog">
+    {% endblock %}
     <meta charset="utf-8" />
     {% if FEED_ALL_ATOM %}
     <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Full Atom Feed" />
