--- a/pelicanyan/templates/page.html
+++ b/pelicanyan/templates/page.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-{% block title %}{{ page.title }}{%endblock%}
+{% block head %}
+{{ super() }}
+    {% block title %}<title>{{ page.title }} | {{ SITENAME }}</title>{% endblock title %}
+{% endblock %}
 {% block content %}
     <h1>{{ page.title }}</h1>
     {% import 'translations.html' as translations with context %}
